--- a/tools/TestWowGameFile/TestWowGameFile.vcxproj.filters
+++ b/tools/TestWowGameFile/TestWowGameFile.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Common">
+    <Filter Include="common">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
@@ -9,135 +9,135 @@
   <ItemGroup>
     <ClCompile Include="TestWowGameFile.cpp" />
     <ClCompile Include="..\..\engine\common\CFileSystem.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\CMemFile.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\CReadFile.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowDbFile.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowEnvironment.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowTable.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowWDB5File.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowWDC3File.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\engine\common\aabbox3d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\base.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CFileSystem.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CMemFile.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CReadFile.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CSysChrono.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CSysSync.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\CWriteFile.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\frustum.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\function.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\function3d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\line3d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\matrix4.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\plane3d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\predefine.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\quaternion.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\rect.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\S3DVertex.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\SColor.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\stringext.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\varianttype.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\vector2d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\vector3d.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowDatabase.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowDbFile.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowEnums.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowEnvironment.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowTable.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowWDB5File.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowWDC3File.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowWMOFile.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h">
-      <Filter>Common</Filter>
+      <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
