--- a/engine/renderer/mywowdriver.vcxproj
+++ b/engine/renderer/mywowdriver.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="..\renderer\OpenGL\COpenGLDriver.h" />
     <ClInclude Include="..\renderer\OpenGL\COpenGLMaterialRenderComponent.h" />
     <ClInclude Include="..\renderer\opengl\COpenGLPCH.h" />
+    <ClInclude Include="OpenGL\COpenGLDrawHelperComponent.h" />
     <ClInclude Include="OpenGL\COpenGLExtension.h" />
     <ClInclude Include="OpenGL\COpenGLHelper.h" />
     <ClInclude Include="OpenGL\COpenGLRenderTarget.h" />
@@ -34,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\mywowdriver.cpp" />
+    <ClCompile Include="OpenGL\COpenGLDrawHelperComponent.cpp" />
     <ClCompile Include="OpenGL\COpenGLDriver.cpp" />
     <ClCompile Include="..\renderer\OpenGL\COpenGLDriver_draw.cpp" />
     <ClCompile Include="..\renderer\OpenGL\COpenGLMaterialRenderComponent.cpp" />
