--- a/engine/renderer/mywowdriver.vcxproj.filters
+++ b/engine/renderer/mywowdriver.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="OpenGL\COpenGLVertexDeclaration.h">
       <Filter>OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="OpenGL\COpenGLDrawHelperComponent.h">
+      <Filter>OpenGL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\mywowdriver.cpp" />
@@ -72,6 +75,9 @@
       <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="OpenGL\COpenGLVertexDeclaration.cpp">
+      <Filter>OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGL\COpenGLDrawHelperComponent.cpp">
       <Filter>OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
