--- a/engine/renderer/mywowdriver.vcxproj
+++ b/engine/renderer/mywowdriver.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="OpenGL\COpenGLRenderTarget.h" />
     <ClInclude Include="OpenGL\COpenGLShaderManageComponent.h" />
     <ClInclude Include="OpenGL\COpenGLTexture.h" />
+    <ClInclude Include="OpenGL\COpenGLTextureManageComponent.h" />
     <ClInclude Include="OpenGL\COpenGLTextureWriteComponent.h" />
     <ClInclude Include="OpenGL\COpenGLVertexDeclaration.h" />
     <ClInclude Include="OpenGL\COpenGLVertexIndexBuffer.h" />
@@ -42,6 +43,7 @@
     <ClCompile Include="OpenGL\COpenGLRenderTarget.cpp" />
     <ClCompile Include="OpenGL\COpenGLShaderManageComponent.cpp" />
     <ClCompile Include="OpenGL\COpenGLTexture.cpp" />
+    <ClCompile Include="OpenGL\COpenGLTextureManageComponent.cpp" />
     <ClCompile Include="OpenGL\COpenGLTextureWriteComponent.cpp" />
     <ClCompile Include="OpenGL\COpenGLVertexDeclaration.cpp" />
     <ClCompile Include="OpenGL\COpenGLVertexIndexBuffer.cpp" />
