--- a/engine/renderer/mywowdriver.vcxproj.filters
+++ b/engine/renderer/mywowdriver.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="OpenGL\COpenGLDrawHelperComponent.h">
       <Filter>OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="OpenGL\COpenGLTextureManageComponent.h">
+      <Filter>OpenGL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\mywowdriver.cpp" />
@@ -75,6 +78,9 @@
       <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="OpenGL\COpenGLDrawHelperComponent.cpp">
+      <Filter>OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenGL\COpenGLTextureManageComponent.cpp">
       <Filter>OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
