--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="..\common\CMemFile.h" />
     <ClInclude Include="..\common\CReadFile.h" />
     <ClInclude Include="..\common\CSysChrono.h" />
+    <ClInclude Include="..\common\CSysCodeCvt.h" />
     <ClInclude Include="..\common\CSysSync.h" />
     <ClInclude Include="..\common\CWriteFile.h" />
     <ClInclude Include="..\common\frustum.h" />
@@ -88,6 +89,7 @@
     <ClCompile Include="..\common\CFileSystem.cpp" />
     <ClCompile Include="..\common\CMemFile.cpp" />
     <ClCompile Include="..\common\CReadFile.cpp" />
+    <ClCompile Include="..\common\CSysCodeCvt.cpp" />
     <ClCompile Include="..\common\CWriteFile.cpp" />
     <ClCompile Include="..\common\wowDatabase.cpp" />
     <ClCompile Include="..\common\wowDbFile.cpp" />
