--- a/engine/mywow/mywow.vcxproj.filters
+++ b/engine/mywow/mywow.vcxproj.filters
@@ -203,6 +203,9 @@
     <ClInclude Include="..\engine\CFTGlyphCache.h">
       <Filter>engine</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\CSysCodeCvt.h">
+      <Filter>common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFileSystem.cpp">
@@ -285,6 +288,9 @@
     </ClCompile>
     <ClCompile Include="..\engine\CFTGlyphCache.cpp">
       <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\CSysCodeCvt.cpp">
+      <Filter>common</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
