--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -64,6 +64,7 @@
     <ClInclude Include="..\engine\CInputReader.h" />
     <ClInclude Include="..\engine\CMesh.h" />
     <ClInclude Include="..\engine\CMeshManager.h" />
+    <ClInclude Include="..\engine\CMeshSceneNode.h" />
     <ClInclude Include="..\engine\COSInfo.h" />
     <ClInclude Include="..\engine\CScene.h" />
     <ClInclude Include="..\engine\CSceneRenderer.h" />
@@ -72,6 +73,7 @@
     <ClInclude Include="..\engine\EngineUtil.h" />
     <ClInclude Include="..\engine\FontDef.h" />
     <ClInclude Include="..\engine\IImage.h" />
+    <ClInclude Include="..\engine\IRenderer.h" />
     <ClInclude Include="..\engine\ISceneNode.h" />
     <ClInclude Include="..\engine\CSysUtil.h" />
     <ClInclude Include="..\engine\CTimer.h" />
@@ -113,6 +115,7 @@
     <ClCompile Include="..\engine\CInputReader.cpp" />
     <ClCompile Include="..\engine\CMesh.cpp" />
     <ClCompile Include="..\engine\CMeshManager.cpp" />
+    <ClCompile Include="..\engine\CMeshSceneNode.cpp" />
     <ClCompile Include="..\engine\COSInfo.cpp" />
     <ClCompile Include="..\engine\CScene.cpp" />
     <ClCompile Include="..\engine\CSceneRenderer.cpp" />
@@ -124,6 +127,7 @@
     <ClCompile Include="..\engine\ddslib.cpp" />
     <ClCompile Include="..\engine\Engine.cpp" />
     <ClCompile Include="..\engine\EngineUtil.cpp" />
+    <ClCompile Include="..\engine\IRenderer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5FC4A776-9356-4FE9-93BA-F610DEE4E660}</ProjectGuid>
